test/Error/Unify/FunMore/Main.ds

-- Checks type error reporting.
--	Too many args to f1.

f1 x	= x + 1;
y	= f1 2 3;
